--- a/src/content/docs/annexes/difficultes.mdx
+++ b/src/content/docs/annexes/difficultes.mdx
@@ -51,18 +51,29 @@ La génération de cartes par l'IA prenait parfois plus de 30 secondes, causant 
 - Latence variable selon la charge
 
 **Analyse :**
-```
-Avant optimisation:
-├── Extraction contenu: 2s
-├── Appel LLM (10 questions): 25s ❌
-├── Validation: 3s
-└── Total: ~30s
 
-Après optimisation:
-├── Extraction contenu: 1s
-├── Appel LLM (batch): 8s ✅
-├── Validation (parallel): 1s
-└── Total: ~10s
+```mermaid
+flowchart LR
+    subgraph Avant["❌ Avant optimisation ~30s"]
+        direction TB
+        A1["Extraction contenu"] -->|2s| A2["Appel LLM x10"]
+        A2 -->|25s| A3["Validation"]
+        A3 -->|3s| A4((30s))
+    end
+    
+    subgraph Apres["✅ Après optimisation ~10s"]
+        direction TB
+        B1["Extraction contenu"] -->|1s| B2["Appel LLM batch"]
+        B2 -->|8s| B3["Validation parallèle"]
+        B3 -->|1s| B4((10s))
+    end
+    
+    Avant -.->|"🚀 3x plus rapide"| Apres
+    
+    style Avant fill:#ffcdd2,stroke:#c62828
+    style Apres fill:#c8e6c9,stroke:#2e7d32
+    style A4 fill:#ef5350,stroke:#c62828
+    style B4 fill:#66bb6a,stroke:#2e7d32
 ```
 
 **Solutions implémentées :**
@@ -232,17 +243,43 @@ Configuration de l'infrastructure Kubernetes sur OVHcloud.
 ### Méthodologie améliorée
 
 **Avant (Phase prototype) :**
-```
-Idée → Code → Test manuel → Production
-        ↓
-     Bugs en prod 😱
+
+```mermaid
+flowchart LR
+    A["💡 Idée"] --> B["💻 Code"]
+    B --> C["🖱️ Test manuel"]
+    C --> D["🚀 Production"]
+    B -.-> E["😱 Bugs en prod"]
+    
+    style A fill:#e3f2fd,stroke:#1976d2
+    style B fill:#fff3e0,stroke:#f57c00
+    style C fill:#fff9c4,stroke:#f9a825
+    style D fill:#ffcdd2,stroke:#c62828
+    style E fill:#ef5350,stroke:#c62828,color:#fff
 ```
 
 **Après (Phase actuelle) :**
-```
-Idée → Conception → Tests → Code → Review → Tests → Staging → Production
-                                                        ↓
-                                                 Stabilité 😊
+
+```mermaid
+flowchart LR
+    A["💡 Idée"] --> B["📋 Conception"]
+    B --> C["🧪 Tests"]
+    C --> D["💻 Code"]
+    D --> E["👀 Review"]
+    E --> F["🧪 Tests"]
+    F --> G["🎭 Staging"]
+    G --> H["🚀 Production"]
+    H -.-> I["😊 Stabilité"]
+    
+    style A fill:#e3f2fd,stroke:#1976d2
+    style B fill:#e8f5e9,stroke:#388e3c
+    style C fill:#fff3e0,stroke:#f57c00
+    style D fill:#fff3e0,stroke:#f57c00
+    style E fill:#f3e5f5,stroke:#7b1fa2
+    style F fill:#fff3e0,stroke:#f57c00
+    style G fill:#e0f7fa,stroke:#0097a7
+    style H fill:#c8e6c9,stroke:#2e7d32
+    style I fill:#66bb6a,stroke:#2e7d32,color:#fff
 ```
 
 ---
