--- a/src/content/docs/architecture/service-ia.mdx
+++ b/src/content/docs/architecture/service-ia.mdx
@@ -116,10 +116,23 @@ Le système est organisé autour de **3 graphes LangGraph** qui collaborent pour
 
 ### Flux de données entre les graphes
 
-```
-Ressource brute → [Embedding Graph] → Chunks vectorisés → [Card Generator] → Cartes d'apprentissage
-                        ↑
-          [Batch Embedding Graph] ← Plusieurs ressources
+```mermaid
+flowchart LR
+    A["📄 Ressource brute"] --> B["🔄 Embedding Graph"]
+    B --> C["📊 Chunks vectorisés"]
+    C --> D["🎴 Card Generator"]
+    D --> E["✅ Cartes d'apprentissage"]
+    
+    F["📚 Plusieurs ressources"] --> G["📦 Batch Embedding Graph"]
+    G --> B
+    
+    style A fill:#e3f2fd,stroke:#1976d2
+    style B fill:#fff3e0,stroke:#f57c00
+    style C fill:#f3e5f5,stroke:#7b1fa2
+    style D fill:#e8f5e9,stroke:#388e3c
+    style E fill:#c8e6c9,stroke:#2e7d32
+    style F fill:#e3f2fd,stroke:#1976d2
+    style G fill:#fff3e0,stroke:#f57c00
 ```
 
 <Aside type="note" title="Qu'est-ce qu'un chunk ?">
