--- a/src/content/docs/projet/securite.mdx
+++ b/src/content/docs/projet/securite.mdx
@@ -29,12 +29,20 @@ Mindlet manipule des données sensibles (contenus éducatifs personnels, donnée
 
 Toutes les communications sont chiffrées :
 
-```
-┌──────────────┐         TLS 1.3          ┌──────────────┐
-│   Mobile     │ ◄═══════════════════════►│   API        │
-│   App        │    Certificat Let's      │   Backend    │
-│              │    Encrypt               │              │
-└──────────────┘                          └──────────────┘
+```mermaid
+flowchart LR
+    subgraph Mobile["📱 Mobile App"]
+        MA[Application]
+    end
+    
+    subgraph Backend["🔒 API Backend"]
+        API[Serveur]
+    end
+    
+    MA <-->|"🔐 TLS 1.3\nCertificat Let's Encrypt"| API
+    
+    style Mobile fill:#e3f2fd,stroke:#1976d2
+    style Backend fill:#e8f5e9,stroke:#388e3c
 ```
 
 **Configuration :**
