--- a/src/content/docs/architecture/backend.mdx
+++ b/src/content/docs/architecture/backend.mdx
@@ -6,6 +6,7 @@ sidebar:
 ---
 
 import { Aside, Badge, Steps, TabItem, Tabs } from '@astrojs/starlight/components';
+import MermaidDownload from '../../../components/MermaidDownload.astro';
 
 # 🔧 Backend API Laravel
 
@@ -34,6 +35,7 @@ Le backend de Mindlet est une **API RESTful** développée avec **Laravel 12**, 
 
 ## Architecture du code
 
+<MermaidDownload title="Structure Laravel">
 ```mermaid
 flowchart TD
     subgraph app["📁 app"]
@@ -60,6 +62,7 @@ flowchart TD
     style app fill:#f5f5f5,stroke:#333
     style Http fill:#e3f2fd,stroke:#1976d2
 ```
+</MermaidDownload>
 
 ## Principes d'architecture
 
